# ha-idleon

./: .gitignore  .pre-commit-config.yaml  AI_DECLARATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THANKS.md  THIRD_PARTY_NOTICES.md  WHATSNEW.md  hacs.json  justfile  package-lock.json  package.json  pyproject.toml  requirements_test.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  release-check.yml  release.yml  test.yml  type-check.yml
assets/_psd/: coins.psd  official-idleon-characters-icon.psd  project-icon.psd
assets/psd/: official-idleon-vial-icon.psd
docs/: auth-data-source.md  manual-testing.md
examples/: sample_idleon_data.json
scripts/: _lib.sh  build-release  check  create-release  deploy-ha-share  format  format-check  generate-project-icons  import-toolbox-parsers  inspect-idleon-export  install-hooks  lint  pad-entity-picture-assets  release-check  release_asset_manifest.py  render-debug-parsed-data  restart-home-assistant  run-home-assistant  split-website-data  test  type-check  version-bump-hook
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_debug_renderer.py  test_diagnostics.py  test_entities.py  test_game_maps.py  test_lifecycle.py  test_number_format.py  test_parser.py  test_project_metadata.py  test_steam_auth.py  test_toolbox_parsers.py  test_version_bump_hook.py  test_website_data_splitter.py
tools/: rename-monster-assets.ts
(+29 files in other folders)
